fix: cursor on mobile and footer z-index

--- a/components/Cursor/cursor.module.scss
+++ b/components/Cursor/cursor.module.scss
@@ -7,9 +7,10 @@
     position: fixed;
     transform: translate(-50%, -50%);
     z-index: $index--cursor;
+    display: none;
 
-    @media (hover: none) and (pointer: coarse) {
-        display: none;
+    @media (hover: hover) and (pointer: fine){
+        display: block;
     }
 }
 
